--- a/style.css
+++ b/style.css
@@ -256,6 +256,27 @@ position:relative;top:-120px;
     font-family: broadway;
 }
 
+h3{
+    background-color: #be9f63;
+    color: #3b3016; 
+    padding: 15px;
+    width: 146%; 
+    height: 150%; 
+    margin-top: -50%;
+    margin-bottom: 20px;
+    border-radius: 2px; 
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
+    line-height: 1.6; 
+    font-family: Constantia;
+    font-size: 150%;
+}
+
+iframe {
+    border-radius: 10px; 
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+    width: 155%;
+   }
+
 .klik-voor-diy{
     display: inline-block; 
     background-color: #b2ba6d;
